<resources>
    <string name="app_name">Bodima</string>
    <string name="loginbtn">Login</string>
    <string name="topHeader">Log Here!</string>
    <string name="emailhint">Enter Your Email..</string>
    <string name="pwdhint">Enter Your Password..</string>
    <string name="signup">Sing Up Here</string>

    <!--    Registration Strings-->

    <string name="RegHeader">Register Here!</string>
    <string name="address">Address :</string>
    <string name="mail">E-mail :</string>
    <string name="phone">Phone :</string>
    <string name="regloaction">Current Loctation </string>

    <!-- advertisment strings-->
    <string name="Land_btn">Land</string>
    <string name="House_btn">Houses</string>
    <string name="Vehi_btn">Vehicles</string>
    <string name="category">Category :</string>
    <string name="location">Location :</string>
    <string name="add_photo_btn">+ Add Photos</string>
    <string name="landSize">Land Size :</string>
    <string name="adtitle">Title :</string>
    <string name="description">Description :</string>
    <string name="adprice">Price :</string>
    <string name="contact_details">Contact Details :</string>
    <string name="post_btn">POST AD</string>
    <string name="type">Type :</string>
    <string name="brand">Brand :</string>
    <string name="model">Model :</string>
    <string name="condition">Condition :</string>
    <string name="fuel">Fuel :</string>
    <string-array name="type_id">
        <item>Car</item>
        <item>Van</item>
        <item>Bike</item>
        <item>Other</item>
    </string-array>
    <string-array name="condition_id">
        <item>New</item>
        <item>Old</item>
        <item>Used</item>
    </string-array>
    <string-array name="fuel_id">
        <item>Petrol</item>
        <item>Diesel</item>
    </string-array>
    <string name="beds">  Beds :</string>
    <string name="baths"> Baths : </string>

    <string-array name="bed_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5+</item>
    </string-array>

    <string-array name="bath_id">
        <item>1</item>
        <item>2</item>
        <item>3+</item>
    </string-array>

    <string name="postAd_tag">Post Your Advertisment</string>
    <string name="select_category">Select a Category</string>
    <string name="view_btn">View</string>
    <string name="showAll_ads">Show All Advertisments</string>
    <string name="update_btn">Update Details</string>
    <string name="delete_btn">Delete Ad</string>
    <string name="previous_btn">Previous</string>
    <string name="next_btn">Next</string>
    <string name="my_ads">My Advertisment</string>
    <string name="house">House</string>
    <string name="land">Land</string>
    <string name="vehicle">Vehicle</string>
    <string name="colombo">Colombo</string>
    <string name="description_hint">Write a Description</string>
    <string name="price_hint">Rs.</string>
    <string name="loaction">Current Location </string>

    <!--Add House Strings-->
    <string name="addHouse">Add House</string>
    <string name="userlabel">Username</string>
    <string name="username">Useruser02155</string>
    <string name="datelabel">Date</string>
    <string name="currentdate">20 Aug 2020</string>
    <string name="title_label">Title</string>
    <string name="title">max 20 characters</string>
    <string name="description_label">Description</string>
    <string name="desc_txt">Write a description here… (max 200 characters)</string>
    <string name="amount_rs">Rs.</string>
    <string name="amount_txt">0,000</string>
    <string name="amount_month">/month</string>
    <string name="beds_label">Beds</string>
    <string name="beds_num">0</string>
    <string name="baths_label">Baths</string>
    <string name="baths_num">0</string>
    <string name="phone_house">+94111111111</string>
    <string name="phone_labele">Phone Number</string>
    <string name="city_label">City</string>
    <string name="city">Enter city here</string>
    <string name="address_house">Address</string>
    <string name="address_hint">Enter address here…</string>
    <string name="btnImg">Add Images</string>
    <string name="btnLocation">Add Location</string>
    <string name="btnSave">Save</string>

    <!--Edit House Strings-->
    <string name="updateLocation">Edit Location</string>
    <string name="btnUpdate">Update Details</string>

    <!--HouseDetails String-->
    <string name="imgCount">3/3</string>
    <string name="postDate">posted on 20th August 2020</string>
    <string name="price">Rs. 0, 000 / month</string>
    <string name="postUser">for rent by Useruser02155</string>
    <string name="details">Room includes basic furniture such as a bed, table and chair(s). Also a kitchen area is available. Bathroom/Toilet is separate but located right next to the room.</string>
    <string name="beds_no">2</string>
    <string name="baths_no">2</string>
    <string name="addressFull">No.000, Lorem Ipsum, dolor sit amet.</string>
    <string name="city_name">Colombo</string>
    <string name="title_display">Room for Rent</string>
    <string name="call_now">Call Now</string>
    <string name="btn_reviews">Ratings &amp; Reviews</string>

    <!--Home & Nav-->
    <string name="imageContent">image</string>
    <string name="nav_home">Home</string>
    <string name="nav_ads">Ads</string>
    <string name="nav_expense">Expense Tracker</string>
    <string name="nav_lgout">Logout</string>
    <string name="nav_draw_open">Open navigation drawer</string>
    <string name="nav_draw_close">Close navigation drawer</string>

    <!--    Expencedashboard-->
    <string name="amount">Enter Amount</string>
    <string name="extitle">Personal Expenses Management</string>
    <string name="enteramount">Enter Amount</string>
    <string name="addicon">+</string>
    <string name="minusicon">-</string>
    <string name="currentbalance">Current Balance</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="recharge">Recharge</string>
    <string name="cloths">Clothes</string>
    <string name="rent">Rent</string>
    <string name="bill">Bill</string>
    <string name="salary">Sallary</string>
    <string name="interst">Bank Intrest</string>
    <string name="Loan">Loan</string>
    <string name="lending">Lending</string>
    <string name="other">Other</string>

    <!--    userprofile-->
    <string name="editprof">Edit Profile</string>
    <string name="userprofile">User Profile</string>
    <string name="password">password :</string>
    <string name="confirmpassword">Confirm password :</string>

    <!--    RatingsAndReviews-->
    <string name="place">The Place Name</string>
    <string name="allRev">All Reviews</string>
    <string name="name1">John</string>
    <string name="name2">Pitty</string>
    <string name="name3">Billy</string>
    <string name="rate">4.0</string>
    <string name="warning">*please note that your reviews are visible for all users</string>
    <string name="button">POST</string>
    <string name="rev1">This is a good place to live</string>
    <string name="rev2">Good service. Thank you!</string>
    <string name="rev3">calm and peaceful place. better to learners.</string>
    <string name="hint1">Enter Your Review Here</string>
    <string name="revRlt">Delete</string>

    <!--    trasaction history-->

    <string name="history">Expences History</string>
    <string name="date">Date :</string>
    <string name="historyamount">Amount :</string>
    <string name="delete">Delete</string>

</resources>