<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".AddHouse">

    <LinearLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_edittxt_left"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text="@string/username"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_label_right"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp"
            android:inputType="date"
            android:text="@string/userlabel"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_edittxt_left"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/currentdate"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_label_right"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp"
            android:text="@string/datelabel"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/descLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/desc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_label_long"
            android:gravity="center_horizontal|center_vertical"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="@string/description_label" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/custom_edittext_txtarea"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/desc_txt"
            android:inputType="textMultiLine"
            android:lines="20"
            android:maxLines="10"
            android:minLines="2"
            android:padding="12dp"
            android:textColorHint="@color/darkgray"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/RS_label"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_label_left"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp"
            android:text="@string/amount_rs"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_edittxt_right"
            android:ems="10"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:hint="@string/amount_txt"
            android:textColor="@color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/month_label"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/amount_month"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/facilityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/beds_label"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_label_left"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp"
            android:text="@string/beds_label"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/beds_num"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_edittxt_right"
            android:ems="10"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:hint="@string/beds_num"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/baths_label"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_label_left"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp"
            android:text="@string/baths_label"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/baths_num"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_edittxt_right"
            android:ems="10"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:hint="@string/baths_num" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_label_left"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp"
            android:text="@string/phone_labele"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_edittxt_right"
            android:ems="10"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:inputType="phone"
            android:hint="@string/phone_house" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city_label"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_label_left"
            android:gravity="center_vertical|center_horizontal"
            android:padding="10dp"
            android:text="@string/city_label"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_edittxt_right"
            android:ems="10"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            android:inputType="text"
            android:hint="@string/city" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_label_long"
            android:gravity="center_horizontal|center_vertical"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="@string/address_house" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/custom_edittext_txtarea"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/address_hint"
            android:inputType="textMultiLine"
            android:lines="20"
            android:maxLines="10"
            android:minLines="2"
            android:padding="12dp"
            android:textColorHint="@color/darkgray"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_style"
            android:text="@string/btnImg"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/addLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_style"
            android:text="@string/btnLocation"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>