<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave2"
    android:backgroundTint="@color/lavender"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="155dp"
        android:text="@string/place"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="409dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Enter Your Review Here"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="289dp"
        android:text="@string/warning" />

    <Button
        android:id="@+id/button"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="213dp"
        android:background="@drawable/loginbtn"
        android:backgroundTint="@color/silver"
        android:onClick="openRatings"
        android:text="@string/button" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="425dp"
        android:background="@drawable/common_textbox"
        android:backgroundTint="@color/snow"
        android:backgroundTintMode="screen" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="316dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint1"
        android:inputType="textMultiLine" />

</RelativeLayout>